# icu-data.rlib

./: AUTHORS  Cargo.toml  README.md
resources/: mappings.txt  ucm.pest
resources/brotli/: filelist.tsv  hpux-big5-11.11hpux-cp1140-11.11hpux-cp1141-11.11hpux-cp1142-11.11hpux-cp1143-11.11hpux-cp1144-11.11hpux-cp1145-11.11hpux-cp1146-11.11hpux-cp1147-11.11hpux-cp1148-11.11.ucm.tar.b  hpux-cp1149-11.11hpux-cp1250-11.11hpux-cp1251-11.11hpux-cp1252-11.11hpux-cp1253-11.11hpux-cp1254-11.11hpux-cp1255-11.11hpux-cp1256-11.11hpux-cp1257-11.11hpux-cp1258-11.11.ucm.tar.b  hpux-cp437-11.11hpux-cp737-11.11hpux-cp775-11.11hpux-cp850-11.11hpux-cp852-11.11hpux-cp855-11.11hpux-cp857-11.11hpux-cp860-11.11hpux-cp861-11.11hpux-cp862-11.11.ucm.tar.b  hpux-cp863-11.11hpux-cp864-11.11hpux-cp865-11.11hpux-cp866-11.11hpux-cp869-11.11hpux-cp874-11.11hpux-eucJP0201-11.11hpux-eucJP-11.11hpux-eucJPMS-11.11hpux-eucKR-11.11.ucm.tar.b  hpux-eucTW-11.11hpux-greee-11.11hpux-hkbig5-11.11hpux-hp15CN-11.11hpux-iso81-11.0hpux-iso815-11.0hpux-iso82-11.0hpux-iso85-11.0hpux-iso86-11.0hpux-iso87-11.0.ucm.tar.b  hpux-iso87-11.11hpux-iso88-11.0hpux-iso89-11.0hpux-roc15-11.11hpux-roma8-11.0hpux-sjis0201-11.11hpux-sjis-11.11hpux-sjisMS-11.11hpux-thai8-11.0ibm-1004_P100-1995.ucm.tar.b  ibm-273_P100-1999ibm-274_P100-2000ibm-275_P100-1995ibm-277_P100-1999ibm-278_P100-1999ibm-280_P100-1999ibm-282_P100-1995ibm-284_P100-1999ibm-285_P100-1999ibm-286_P100-2003.ucm.tar.b  (+29 more)
src/: charsets.rs  lib.rs
src/ucm/: charsets.rs  errors.rs  mappings.rs  mod.rs  parser.rs  types.rs  util.rs
